# super_qr_code_scanner

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/: settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/super_qr_code_scanner_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/mixin/: state_mixin.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: super_qr_code_scanner.modulemap  super_qr_code_scanner.podspec
ios/Classes/: SuperQrCodeScannerPlugin.swift
ios/super_qr_code_scanner/: Package.swift
lib/: super_qr_code_scanner.dart
lib/src/: bindings.dart  config.dart  exceptions.dart  extension.dart  logger.dart  models.dart  validator.dart
linux/: CMakeLists.txt
macos/: super_qr_code_scanner.podspec
macos/super_qr_code_scanner/: Package.swift
script/: build-ios-xcframework.sh  build-macos-xcframework.sh  prepare-ios-lib.sh  prepare-macos-lib.sh
src/: CMakeLists.txt  super_qr_code_scanner_api.cpp  super_qr_code_scanner_api.h
src/zxing/include/: Version.h
test/: qr_scanner_test.dart
windows/: CMakeLists.txt
